--- a/lab2/styles.css
+++ b/lab2/styles.css
@@ -14,6 +14,14 @@ header {
 }
 
 footer {
-    
+    font-style: italic;
+    text-align: right;
 }
 
+table thead tr {
+    font-weight: bold;
+}
+
+table {
+    width: 100%;
+}
