--- a/lab2/styles.css
+++ b/lab2/styles.css
@@ -1,12 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-color: lightblue;
-    color: maroon;
-    font-family: Arial;
-}
-
-
 header {
     background-color: black;
     padding: 20px;
@@ -15,11 +6,15 @@ header {
 
 footer {
     font-style: italic;
-    text-align: right;
+
 }
 
 table thead tr {
     font-weight: bold;
+}
+
+.table2 thead tr {
+    text-align: center;
 }
 
 table {
@@ -40,5 +35,7 @@ span {
     border-radius: 2px;
 }
 
-
-
+li {
+    font-style: italic;
+    color: darkblue;
+}
