--- a/lab2/gone.css
+++ b/lab2/gone.css
@@ -4,11 +4,11 @@ p {
     font-size: 20px;
 }
 
-p h1 h2 {
+p, h1, h2 {
     line-height: 1.5;
 }
 
-h1 h2 {
+h1, h2 {
     text-align: center;
 }
 
