--- a/lab3/quote.css
+++ b/lab3/quote.css
@@ -4,7 +4,7 @@
     border-radius: 10px;
     margin: 20px;
     box-shadow: 10px 10px 5px #0002;
-    background: linear-gradient(to right, gold, green, blue);
+    background: linear-gradient(to right, red, blue);
 }
 
 .text {
